--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Kairos LLC</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<p>typeshit</p>
+	<nav>
+		<ul>
+			<li><a href="#">placeholder</a></li>
+		</ul>
+	</nav>
 </body>
 </html>
