--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="#">placeholder</a></li>
+			<li><a href="#"><h2>placeholder</h2></a></li>
 		</ul>
 	</nav>
 </body>
