--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav>
-		<ul>
-			<li><a href="#"><h2>placeholder</h2></a></li>
-		</ul>
-	</nav>
+	<div class="navbar">
+		<div class="vertical">
+			<div class="horizontal">
+				<a href="#">placeholder</a>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
