--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="navbar">
-		<div class="vertical">
-			<div class="horizontal">
-				<a href="#">placeholder</a>
-			</div>
-		</div>
-	</div>
+	<nav class="navbar">
+        <ul class="navbar-menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
