--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
         <ul class="navbar-menu">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="#sub-companies">Sub-Companies</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+    <br>
+    <div id="home">
+    	<div class="home-text">
+    		<h2>Kairos LLC</h2>
+    		<h3>Kairos LLC is a lead company for multiple sub companies such as, Kairos Hosting, and Kairos Landscaping.</h3>
+    	</div>
+    </div>
 </body>
 </html>
