--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
     <div id="home">
     	<div class="home-text">
     		<h2>Kairos LLC</h2>
-    		<h3>Kairos LLC is a lead company for multiple sub companies such as, Kairos Hosting, and Kairos Landscaping.</h3>
+    		<h3>Kairos LLC is a lead company for multiple sub companies.</h3>
     	</div>
+    </div>
+    <div id="about">
+    	<p>Kairos LLC is a lead company for multiple sub companies such as, Kairos Hosting, Kairos Programming, and Kairos Landscaping.</p>
+    </div>
+    <div id="sub-companies">
+    	<a href="https://hosting.kaiross.info"><h2>Kairos Hosting</h2></a>
+    	<a href="#sub-companies"><h2>Kairos Hosting - GEOLOCKED</h2></a>
+    </div>
+    <div id="contact">
+    	<p>Email: contact@kaiross.info</p>
     </div>
 </body>
 </html>
+
