--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br>
     <div id="sub-companies">
     	<a href="https://hosting.kaiross.info"><h2>Kairos Hosting</h2></a>
-    	<a href="#sub-companies"><h2>Kairos Hosting - GEOLOCKED</h2></a>
+    	<a href="https://programming.kaiross.info"><h2>Kairos Programming</h2></a>
     </div>
     <br>
     <div id="contact">
