--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <br>
     <div id="about">
-    	<p>Kairos LLC is a lead company for multiple sub companies such as, Kairos Hosting, Kairos Programming, and <p style="color:red">Kairos Landscaping</p>.</p>
+    	<p>Kairos LLC is a lead company for multiple sub companies such as, Kairos Hosting, Kairos Programming, and Kairos Landscaping.</p>
     </div>
     <br>
     <div id="sub-companies">
