--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <div id="home">
     	<div class="home-text">
     		<h2>Kairos LLC</h2>
-    		<h3>Kairos LLC is a lead company for multiple sub companies.</h3>
+    		<h3>Kairos LLC is a Lead IT company for multiple sub companies.</h3>
     	</div>
     </div>
     <br>
     <div id="about">
-    	<p>Kairos LLC is a lead company for multiple sub companies such as, Kairos Hosting, Kairos Programming, and Kairos Landscaping.</p>
+    	<p>Kairos LLC is a lead company for multiple sub companies such as, Kairos Hosting, and Kairos Landscaping.</p>
     </div>
     <br>
     <div id="sub-companies">
     	<a href="https://hosting.kaiross.info"><h2>Kairos Hosting</h2></a>
-    	<a href="https://programming.kaiross.info"><h2>Kairos Programming</h2></a>
+        <a href="https://landscaping.kaiross.info"><h2>Kairos Landscaping</h2></a>
     </div>
     <br>
     <div id="contact">
